--- a/blog2.html
+++ b/blog2.html
@@ -1,47 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Website Devan</title>
+    <title>Blog dan Cerita - Website Devan</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="colors.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
 </head>
 <body>
     <div class="top-container heading">
         <div class="top-container2" id="top-container2" style="height:46px;"></div>
-        <script src="script.js"></script>
         <div class="page-container">
             <a href="index.html">Home</a>
             <a class="page-selected" href="blog.html">Blog</a>
-            <a href="fakta.html">Fakta</a>
             <a href="profil.html">Profil</a>
-            <a href="portofolio.html">Portofolio</a>
             <a href="hasil-karya.html">Hasil Karya</a>
             <a href="timeline.html">Timeline</a>
             <a href="updates.html">Updates</a>
             <a href="projects.html">Projects</a>
+            <div style="float:right;" id="search"></div>
+            <script src="search.js"></script>
             <div class="clearfix"></div>
         </div>
     </div>
     <div class="container">
-        <br>
-        <!-- <font face="Open Sans Black" size="6" color="#002080"><b>BLOG DAN CERITA</b></font> -->
-        <div class="heading" id="home" style="font-size:50px; color:#146480;"><b>Blog dan Cerita</b></div>
-        <p style="font-size: 22px">
+        <div class="heading color002" id="home" style="font-size:50px;"><b>Blog dan Cerita</b></div>
+        <p style="font-size:22px">
             <b class="heading">Halaman 2 dari 3</b>
             <br><br>
             Cerita dan pengalaman saya yang pernah dirasakan.<br>
             Dari masa lalu hingga kini, semua cerita sudah menjadi hal yang berharga.<br>
             Inilah beberapa cerita yang ada di blog ini.
         </p>
+        <p class="heading color003" style="font-size:30px;"><u><b>DAFTAR ISI</b></u></p>
+        <div class="box" style="max-width:700px;">
+            <p>
+            <b>Link blog dan cerita:</b><br>
+            <!-- 1. <a href="#1">Holiday to Bromo</a><br>
+            2. <a href="#2">Descriptive Text</a><br>
+            3. <a href="#3">Memenangkan Lomba Besar</a><br>
+            4. <a href="#4">Retreat Eagle School 2023</a><br>
+            5. <a href="#5">Holiday to Bali</a> -->
+            <ol start="11">
+                <li><a class="link" href="#11">Bahasa Pemrograman dan Hubungannya dengan AI</a></li>
+				<li><a class="link" href="#12">Pengembangan dalam Pelajaran Matematika yang Luas</a></li>
+				<li><a class="link" href="#13">Sejarah dan Pengaruh Mobil Listrik di Dunia</a></li>
+				<li><a class="link" href="#14">Holiday to Surabaya & Malang</a></li>
+				<li><a class="link" href="#15">Pengalaman saat Lomba Matematika UMC UNDIP 2025</a></li>
+				<li><a class="link" href="#16">Pengalaman saat Lomba Matematika KMNR dan IKMC 2025</a></li>
+				<li><a class="link" href="#17">Pengalaman saat Lomba Matematika LMNAS UGM 2025</a></li>
+				<li><a class="link" href="#18">Pengalaman saat Lomba Matematika LOGIKA UI 2025</a></li>
+				<li><a class="link" href="#19">...</a></li>
+				<li><a class="link" href="#20">...</a></li>
+            </ol>
+            </p>
+        </div>
+        <br>
         
-        <p class="heading" style="font-size:30px; color:#206044;"><u><b>BEBERAPA CERITA</b></u></p>
-        <p class="heading" style="font-size:25px"><b>11. [Under Construction]</b></p>
-        <p class="heading" style="font-size:25px"><b>12. [Under Construction]</b></p>
-        <p class="heading" style="font-size:25px"><b>13. [Under Construction]</b></p>
-        <p class="heading" style="font-size:25px"><b>14. [Under Construction]</b></p>
-        <p class="heading" style="font-size:25px"><b>15. [Under Construction]</b></p>
+        <p class="heading color003" style="font-size:30px;"><u><b>BEBERAPA CERITA</b></u></p>
+        <p class="heading" id="11" style="font-size:25px"><b>11. Bahasa Pemrograman dan Hubungannya dengan AI</b></p>
+		<div class="container2">
+			First, we departed from <div class="tooltip">Semarang<span class="tooltiptext" id="desc01"></span></div> to <b>Batu Malang</b> by car. Blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla.
+			<br><br>
+			Blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla.
+			<br><br>
+			<b>Link:</b><br>
+			* <a class="link" href="https://id.wikipedia.org/wiki/Jawa_Timur">Wikipedia - Jawa Timur</a><br>
+			<br><br>
+		</div>
+		
+        <p class="heading" id="12" style="font-size:25px"><b>12. Pengembangan dalam Pelajaran Matematika yang Luas</b></p>
+		<div class="container2">
+			First, we departed from <div class="tooltip">Semarang<span class="tooltiptext" id="desc01"></span></div> to <b>Batu Malang</b> by car. Blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla.
+			<br><br>
+			Blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla.
+			<br><br>
+			<b>Link:</b><br>
+			* <a class="link" href="https://id.wikipedia.org/wiki/Jawa_Timur">Wikipedia - Jawa Timur</a><br>
+			<br><br>
+		</div>
+		
+        <p class="heading" id="13" style="font-size:25px"><b>13. Sejarah dan Pengaruh Mobil Listrik di Dunia</b></p>
+		<div class="container2">
+			Mobil Listrik boleh jadi baru kalian dengar. Akan tetapi, pada masa kini Mobil Listrik masih belum berkembang pesat di Indonesia, sedangkan beberapa negara ingin seperti China atau Tiongkok sudah mulai berkembang pesat, karena kesadaran masyarakat di sana mulai menyeluruh dan teknologinya sudah berkembang pesat.
+			<br><br>
+			Secara umum, mobil listrik adalah kendaraan yang menggunakan motor listrik untuk bergerak, ditenagai oleh baterai yang dapat diisi ulang, menawarkan efisiensi energi yang tinggi dan operasi tanpa emisi gas buang langsung. Dalam sejarahnya, mobil listrik pertama kali diperkenalkan oleh produsen otomatif yang berbeda-beda tergantung pada definisi "pertama". Andreas Flocken dari Jerman memperkenalkan Flocken Elektromagen pada tahun 1888 yang dianggap sebagai mobil listrik pertama yang berfungsi penuh. Di akhir abad ke-19 hingga awal abad ke-20, mobil listrik sempat menjadi populer karena mudah dioperasikan dan tidak berisik, bahkan mencapai rekor kecepatan 100 km/jam pada tahun 1899. Namun, adanya produksi massal Fold Model 7 pada tahun 1908 dari Henny Ford dengan harga yang jauh lebih terjangkau, membuat mobil bensin lebih mudah diakses oleh masyarakat umum. Lalu pada tahun 1920-an, penemuan cadangan minyak bumi secara besar-besaran di berbagai wilayah, membuat harga bensin menjadi sangat murah. Lalu, jaringan stasiun pengisian bahan bakar berkembang pesat sementara infrastruktur listrik untuk pengisian daya mobil listrik masih sangat terbatas. Hal itulah menyebabkan jumlah mobil listrik masih minim dibanding dengan mobil bensin.
+			<br><br>
+			Di Indonesia sendiri, jumlah produksi mobil listrik masih terbatas, karena keterbatasan sumber daya alam, dan kurangnya kesadaran manusia.
+			<br><br>
+			<b>Link:</b><br>
+			* <a class="link" href="https://id.wikipedia.org/wiki/Jawa_Timur">Wikipedia - Jawa Timur</a><br>
+			<br><br>
+		</div>
+		
+        <p class="heading" id="14" style="font-size:25px"><b>14. [Under Construction]</b></p>
+        <p class="heading" id="15" style="font-size:25px"><b>15. [Under Construction]</b></p>
+		<p class="heading" id="16" style="font-size:25px"><b>16. [Under Construction]</b></p>
+		<p class="heading" id="17" style="font-size:25px"><b>17. [Under Construction]</b></p>
+		<p class="heading" id="18" style="font-size:25px"><b>18. [Under Construction]</b></p>
+		<p class="heading" id="19" style="font-size:25px"><b>19. [Under Construction]</b></p>
+		<p class="heading" id="20" style="font-size:25px"><b>20. [Under Construction]</b></p>
         <br>
 
         <p class="heading" style="font-size:30px; color:#206044;"><u><b>BEBERAPA LINK</b></u></p>
@@ -60,10 +119,12 @@
         <a class="button heading" href="#home">Kembali ke awal</a>
         <br><br>
     </div>
+    <script src="script.js"></script>
+    <script src="blog-description.js"></script>
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 29 Mar 2024<br>
-        Copyright © 2024 by Devan
+		Terakhir diupdate: 12 Desember 2025<br>
+        Copyright © 2025 by Devan
         </p>
     </footer>
 </body>
