--- a/projects.html
+++ b/projects.html
@@ -46,9 +46,7 @@
         <div class="page-container">
             <a href="index.html">Home</a>
             <a href="blog.html">Blog</a>
-            <a href="fakta.html">Fakta</a>
             <a href="profil.html">Profil</a>
-            <a href="portofolio.html">Portofolio</a>
             <a href="hasil-karya.html">Hasil Karya</a>
             <a href="timeline.html">Timeline</a>
             <a href="updates.html">Updates</a>
@@ -59,9 +57,9 @@
         </div>
     </div>
     <div class="container">
-        <br>
         <!-- <div class="heading" id="home" style="font-size:50px; color:#146480;"><b>Projects</b></div> -->
         <div class="heading" id="home" style="font-size:50px;"><b>Projects</b></div>
+		<img class="disappear" style="position:absolute; right:400px; padding-top:100px; opacity:0.2; width:400px; rotate:10deg;" src="images/project-icon.png">
         <p>
         Halaman Projects ini berisi kumpulan Project yang sudah dibuat sebelumnya, seperti program Streamlit, halaman website kecil, menghitung BMI, penghitung waktu, permainan, dan kumpulan animasi.
 		<br><br>
@@ -77,7 +75,7 @@
                 <li><a class="link" href="#2">Bangun Datar</a></li>
                 <li><a class="link" href="#3">Progress Bar</a></li>
                 <li><a class="link" href="#4">BMI Calculator</a></li>
-                <li><a class="link" href="#5">Soal Pertanyaan</a></li>
+                <li><a class="link" href="#5">Soal Matematika</a></li>
                 <li><a class="link" href="#6">Penghitung Waktu</a></li>
                 <li><a class="link" href="#7">Labirin</a></li>
                 <li><a class="link" href="#8">Kumpulan Animasi</a></li>
@@ -201,7 +199,7 @@
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
         <!-- Terakhir diupdate: 13 Nov 2024<br> -->
         <!-- Terakhir diupdate: 14 Feb 2025<br> -->
-        Terakhir diupdate: 6 Maret 2025<br>
+        Terakhir diupdate: 12 Desember 2025<br>
         Copyright © 2025 by Devan
         </p>
     </footer>
